force-app/main/default/objects/ATAK_Settings__c/ATAK_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ATAK Settings</label>
</CustomObject>