force-app/main/default/objects/ATAK_Settings__c/fields/Validity_End__c.field-meta.xml
<CustomField>
    <fullName>Validity_End__c</fullName>
    <label>Validity End</label>
    <type>DateTime</type>
</CustomField>