force-app/main/default/objects/ATAK_Settings__c/fields/Validity_Start__c.field-meta.xml
<CustomField>
    <fullName>Validity_Start__c</fullName>
    <label>Validity Start</label>
    <type>DateTime</type>
</CustomField>